--- a/success.html
+++ b/success.html
@@ -10,17 +10,19 @@
 </head>
 
 <body>
-    <section class="h-[480px] w-[718px]">
-        <div class="hero min-h-screen bg-slate-300">
-            <div class="hero-content text-center">
-                <div class="max-w-md">
-                    <img class="pl-44" src="images/success.png" alt="" srcset="">
-                    <h1 class="text-5xl font-bold">SUCCESS</h1>
-                    <p class="py-6">Thank you for Booking Our Bus Seats.
-                        We are working hard to find the best service and deals for you.
-                    </p>
-                    <p>Shortly you will find a confirmation in your email.</p>
-                    <button class="btn bg-[#27AE60] rounded-3xl w-72">Continue</button>
+    <section>
+        <div class="card bg-base-100 shadow-xl h-[480px] w-[718px] bg-[#0307120D] ">
+            <figure class="px-10 pt-10">
+                <img src="images/success.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+                <h1 class="text-5xl font-bold">SUCCESS</h1>
+                <p class="py-6">Thank you for Booking Our Bus Seats.
+                    We are working hard to find the best service and deals for you.
+                </p>
+                <p>Shortly you will find a confirmation in your email.</p>
+                <div class="card-actions">
+                    <button class="btn bg-">Continue</button>
                 </div>
             </div>
         </div>
