--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
 
 <body>
     <section>
-        <div class="card bg-base-100 shadow-xl h-[480px] w-[718px] bg-[#0307120D] ">
+        <div class="card bg-base-100 shadow-xl h-[480px] w-[718px] bg-[#0307120D] font-roboto justify-center">
             <figure class="px-10 pt-10">
                 <img src="images/success.png" alt="Shoes" class="rounded-xl" />
             </figure>
