--- a/Index.html
+++ b/Index.html
@@ -227,7 +227,7 @@
 
 
         <!-- Ticketing Interface -->
-        <section class="grid grid-cols-3 w-[1310px] bg-[#FFF] mt-8 rounded-3xl px-10">
+        <section class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 w-[1310px] bg-[#FFF] mt-8 rounded-3xl px-10">
             <!--Available Seat column -->
             <div>
                 <h3 class="text-raleway text-2xl font-semibold mt-8">Select Your Seat</h3>
@@ -257,138 +257,170 @@
                 <div id="seat-status" class="grid grid-cols-5 gap-8 mt-6 font-inter">
                     <button>A</button>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn  bg-[#F7F8F8] disabled:text-white disabled:bg-[#1DD100]" data-category="Economy"
                             data-price="550">A1</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">A2</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">A3</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">A4</button>
                     </div>
                     <button>B</button>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">B1</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">B2</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">B3</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">B4</button>
                     </div>
                     <button>C</button>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">C1</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">C2</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">C3</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">C4</button>
                     </div>
                     <button>D</button>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">D1</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">D2</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">D3</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">D4</button>
                     </div>
                     <button>E</button>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">E1</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">E2</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">E3</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">E4</button>
                     </div>
                     <button>F</button>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">F1</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">F2</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">F3</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">F4</button>
                     </div>
                     <button>G</button>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">G1</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">G2</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">G3</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">G4</button>
                     </div>
                     <button>H</button>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">H1</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">H2</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">H3</button>
                     </div>
                     <div>
-                        <button onclick="addToCart(this)" class="btn bg-[#F7F8F8]" data-category="Economoy"
+                        <button onclick="addToCart(this)"
+                            class="btn disabled:text-white disabled:bg-[#1DD100] bg-[#F7F8F8]" data-category="Economy"
                             data-price="550">H4</button>
                     </div>
                 </div>
@@ -413,7 +445,7 @@
                                 <thead>
                                     <tr>
                                         <th>Seat
-                                            <div id="Select-Seat" class="badge bg-[#1DD100]">0</div>
+                                            <div id="Select-Seat" class="badge text-white bg-[#1DD100]">0</div>
                                         </th>
 
                                         <th>Class</th>
@@ -441,7 +473,8 @@
                         <div class="join">
                             <input id="dis" type="text" placeholder="Have any coupon?"
                                 class="input input-bordered join-item" placeholder="Email" />
-                            <button onclick="apply(this)" class="btn join-item bg-[#1DD100] border-none">Apply</button>
+                            <button onclick="apply(this)"
+                                class="btn join-item bg-[#1DD100] border-none text-white">Apply</button>
                         </div>
                         <!-- Grand total -->
                         <div class="grid grid-cols-2">
@@ -480,7 +513,7 @@
                     </label>
 
                     <!-- button -->
-                    <button id="submit" onclick="my_modal_1.showModal()" class="btn bg-[#1DD100] w-full mt-6"
+                    <button id="submit" onclick="my_modal_1.showModal()" class="btn bg-[#1DD100] w-full mt-6 text-white"
                         disabled>Next</button>
                     <br>
 
@@ -503,7 +536,8 @@
                     <div class="modal-action">
                         <form method="dialog">
                             <!-- if there is a button in form, it will close the modal -->
-                            <button class="btn rounded-3xl bg-[#27AE60] mr-[80px] w-[280px]">Continue</button>
+                            <button
+                                class="btn rounded-3xl bg-[#27AE60] mr-[80px] w-[280px] text-white">Continue</button>
                         </form>
                     </div>
                 </div>
